--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
       <li><a href="#education">Education</a></li>
       <li><a href="#research">Research</a></li>
       <li><a href="#publications-and-awards">Publications and Awards</a></li>
-      <li><a href="#gallary">Gallery</a></li>
+      <li><a href="#gallery">Gallery</a></li>
       <li><a href="#get-in-touch">Get in Touch</a></li>
     </ul>
   </nav>
@@ -277,7 +277,7 @@
         <li>Supervisor: Prof. Dr. Claire Jacob, Prof. Dr. Martin Heine, Dr. Himanshu Kumar Shukla, 
           <a href="https://idn.biologie.uni-mainz.de/" target="_blank" class="edu-link">
             Institute of Developmental Biology and Neurobiology (iDN)
-          </a>, Germany
+          </a>, Germany.
         </li>
       </ul>
     </div>
@@ -285,11 +285,22 @@
       <h3>2019-2024</h3>
       <h4>Five-Year Integrated M.Sc in Lifesciences</h4>
       <p>
-        <strong>Visva-Bharati, India</strong>
-      </p>
+      <strong>
+        <a href="https://www.visvabharati.ac.in/index.html" target="_blank" class="edu-link">
+          Visva-Bharati, India.
+        </a>
+      </strong>
+    </p>
       <ul>
-        <li>Master's Dissertation: High-Content Screening for neurite growth analyses: Evaluating gene treatments</li>
-        <li>Supervisor: Dr. Ishwariya Venkatesh, CSIR-Centre for Cellular and Molecular Biology (CSIR-CCMB), India</li>
+        <li>Master's Dissertation: High-Content Screening for neurite growth analyses: Evaluating gene treatments.</li>
+        <li>Supervisor: 
+        <a href="https://www.ccmb.res.in/People/Research-Group/Ishwariya-Venkatesh" target="_blank" class="edu-link">
+          Dr. Ishwariya Venkatesh
+        </a>, 
+        <a href="https://www.ccmb.res.in/" target="_blank" class="edu-link">
+          CSIR-Centre for Cellular and Molecular Biology (CSIR-CCMB)
+        </a>, India.
+      </li>
       </ul>
     </div>
     <div class="education-subsection">
