--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
       display: flex;
       justify-content: space-between;
       align-items: flex-start;
-      gap: 1.5rem; /* Reduced gap between text and profile image */
+      gap: 1.5rem;
     }
     .hero .about-me-text {
-      flex: 0 0 60%; /* 60% width for the text */
+      flex: 0 0 60%;
       text-align: justify;
     }
     .hero .about-me-text p {
@@ -85,7 +85,7 @@
       text-decoration: underline;
     }
     .hero .profile-image {
-      flex: 0 0 40%; /* 40% width for the image */
+      flex: 0 0 40%;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -93,7 +93,7 @@
     }
     .hero .profile-image img {
       width: 100%;
-      max-width: 450px; /* Increased size of the profile picture */
+      max-width: 450px;
       border-radius: 15px;
       object-fit: cover;
       box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.5);
@@ -124,14 +124,14 @@
     }
     .education-section {
       padding: 5rem 3rem;
-      background: #ffffff; /* White background for the education section */
-      color: #0f172a; /* Dark text for better contrast */
+      background: #ffffff;
+      color: #0f172a;
     }
     .education-section h2 {
       font-size: 3rem;
       font-weight: 700;
       margin-bottom: 2rem;
-      color: #0f172a; /* Dark text color */
+      color: #0f172a;
     }
     .education-item {
       margin-bottom: 3rem;
