--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     }
     .education-section {
       padding: 4rem 2rem;
-      background: linear-gradient(135deg, #2563eb, #1e40af);
+      background: linear-gradient(to right, #0f172a, #1e293b); /* Similar gradient as About Me */
       color: #f8f9fa;
     }
     .education-section h2 {
@@ -132,7 +132,7 @@
       font-weight: 700;
       margin-bottom: 2rem;
       text-align: center;
-      color: #f8f9fa;
+      color: #38bdf8; /* Light blue for the section title */
     }
     .card-container {
       display: flex;
@@ -142,10 +142,10 @@
     }
     .card {
       flex: 1 1 calc(48% - 1rem);
-      background: #1e293b;
+      background: #1e293b; /* Dark blue-gray for card background */
       border-radius: 12px;
       padding: 2rem;
-      color: #f8f9fa;
+      color: #f8f9fa; /* Light text color for readability */
       box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
       max-width: 600px;
       transition: transform 0.2s ease, box-shadow 0.2s ease;
@@ -157,12 +157,12 @@
     .card h3 {
       font-size: 1.8rem;
       margin-bottom: 0.8rem;
-      color: #93c5fd;
+      color: #38bdf8; /* Light blue for card titles */
     }
     .card-date {
       font-size: 1.2rem;
       font-weight: bold;
-      color: #bfdbfe;
+      color: #93c5fd; /* Soft blue for the date */
       margin-bottom: 1.5rem;
     }
     .card ul {
@@ -172,11 +172,11 @@
     }
     .card ul li {
       margin-bottom: 0.8rem;
-      color: #d1d5db;
+      color: #d1d5db; /* Softer white for list items */
     }
     .edu-link {
       text-decoration: none;
-      color: inherit;
+      color: inherit; /* No underline and keeps the text color inherited */
     }
     .edu-link:hover {
       text-decoration: none;
