--- a/index.html
+++ b/index.html
@@ -124,15 +124,15 @@
     }
     .education-section {
       padding: 4rem 2rem;
-      background: linear-gradient(to right, #0f172a, #1e293b); /* Similar gradient as About Me */
-      color: #f8f9fa;
+      background: linear-gradient(to right, #e0f2fe, #f8fafc); /* Light blue to gray gradient */
+      color: #1e293b; /* Dark text for contrast */
     }
     .education-section h2 {
       font-size: 3rem;
       font-weight: 700;
       margin-bottom: 2rem;
       text-align: center;
-      color: #38bdf8; /* Light blue for the section title */
+      color: #0f172a; /* Dark blue for the section title */
     }
     .card-container {
       display: flex;
@@ -142,27 +142,27 @@
     }
     .card {
       flex: 1 1 calc(48% - 1rem);
-      background: #1e293b; /* Dark blue-gray for card background */
+      background: #ffffff; /* Light gray/white for card background */
       border-radius: 12px;
       padding: 2rem;
-      color: #f8f9fa; /* Light text color for readability */
-      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+      color: #1e293b; /* Dark text for readability */
+      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
       max-width: 600px;
       transition: transform 0.2s ease, box-shadow 0.2s ease;
     }
     .card:hover {
       transform: scale(1.03);
-      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.4);
+      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.2);
     }
     .card h3 {
       font-size: 1.8rem;
       margin-bottom: 0.8rem;
-      color: #38bdf8; /* Light blue for card titles */
+      color: #0f172a; /* Slightly darker blue for card titles */
     }
     .card-date {
       font-size: 1.2rem;
       font-weight: bold;
-      color: #93c5fd; /* Soft blue for the date */
+      color: #475569; /* Muted grayish-blue for the date */
       margin-bottom: 1.5rem;
     }
     .card ul {
@@ -172,7 +172,7 @@
     }
     .card ul li {
       margin-bottom: 0.8rem;
-      color: #d1d5db; /* Softer white for list items */
+      color: #64748b; /* Softer gray for list items */
     }
     .edu-link {
       text-decoration: none;
