--- a/index.html
+++ b/index.html
@@ -51,41 +51,41 @@
       background-color: #38bdf8;
     }
     .hero {
-      padding: 3rem;
+      padding: 4rem;
       background: linear-gradient(to right, #0f172a, #1e293b);
     }
     .hero h2 {
-      font-size: 3rem;
+      font-size: 3.5rem;
       font-weight: 700;
       color: #38bdf8;
-      margin-bottom: 2rem;
+      margin-bottom: 2.5rem;
       text-align: center;
     }
     .hero .about-me-content {
       display: flex;
       justify-content: space-between;
       align-items: flex-start;
-      gap: 1.5rem;
+      gap: 2rem;
     }
     .hero .about-me-text {
-      flex: 0 0 60%;
+      flex: 0 0 65%;
       text-align: justify;
     }
     .hero .about-me-text p {
-      font-size: 1.2rem;
-      line-height: 1.8;
-      margin-bottom: 1.5rem;
+      font-size: 1.5rem;
+      line-height: 2;
+      margin-bottom: 2rem;
       color: #e2e8f0;
     }
     .hero .about-me-text a {
-      color: inherit;
+      color: #38bdf8;
       text-decoration: none;
     }
     .hero .about-me-text a:hover {
       text-decoration: underline;
     }
     .hero .profile-image {
-      flex: 0 0 40%;
+      flex: 0 0 30%;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -93,7 +93,7 @@
     }
     .hero .profile-image img {
       width: 100%;
-      max-width: 450px;
+      max-width: 400px;
       border-radius: 15px;
       object-fit: cover;
       box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.5);
@@ -124,15 +124,15 @@
     }
     .education-section {
       padding: 4rem 2rem;
-      background: linear-gradient(to right, #e0f2fe, #f8fafc); /* Light blue to gray gradient */
-      color: #1e293b; /* Dark text for contrast */
+      background: linear-gradient(to right, #e0f2fe, #f8fafc);
+      color: #1e293b;
     }
     .education-section h2 {
       font-size: 3rem;
       font-weight: 700;
       margin-bottom: 2rem;
       text-align: center;
-      color: #0f172a; /* Dark blue for the section title */
+      color: #0f172a;
     }
     .card-container {
       display: flex;
@@ -142,10 +142,10 @@
     }
     .card {
       flex: 1 1 calc(48% - 1rem);
-      background: #ffffff; /* Light gray/white for card background */
+      background: #ffffff;
       border-radius: 12px;
       padding: 2rem;
-      color: #1e293b; /* Dark text for readability */
+      color: #1e293b;
       box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
       max-width: 600px;
       transition: transform 0.2s ease, box-shadow 0.2s ease;
@@ -157,12 +157,12 @@
     .card h3 {
       font-size: 1.8rem;
       margin-bottom: 0.8rem;
-      color: #0f172a; /* Slightly darker blue for card titles */
+      color: #0f172a;
     }
     .card-date {
       font-size: 1.2rem;
       font-weight: bold;
-      color: #475569; /* Muted grayish-blue for the date */
+      color: #475569;
       margin-bottom: 1.5rem;
     }
     .card ul {
@@ -172,11 +172,11 @@
     }
     .card ul li {
       margin-bottom: 0.8rem;
-      color: #64748b; /* Softer gray for list items */
+      color: #64748b;
     }
     .edu-link {
       text-decoration: none;
-      color: inherit; /* No underline and keeps the text color inherited */
+      color: inherit;
     }
     .edu-link:hover {
       text-decoration: none;
