--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
           </a>, in collaboration with the
           <a href="https://www.mpip-mainz.mpg.de/en/home" target="_blank">
             Max Planck Institute for Polymer Research
-          </a>, our interdisciplinary team is pioneering new treatments for multiple sclerosis and traumatic brain injuries.
+          </a>, our interdisciplinary team is pioneering new treatments for Multiple Sclerosis (MS), Traumatic Brain injuries (TBI) and Spinal Cord injuries (SCI).
         </p>
         <p>
           Beyond the lab, I enjoy cooking and exploring new places. If you share an interest in neurobiology, regenerative medicine, or the molecular mechanisms of brain repair, I would love to connect!
