--- a/index.html
+++ b/index.html
@@ -181,6 +181,86 @@
     .edu-link:hover {
       text-decoration: none;
     }
+    .research-section {
+      padding: 4rem 2rem;
+      background: linear-gradient(to right, #f8fafc, #e0f2fe);
+      color: #1e293b;
+      text-align: center;
+    }
+    .research-section h2 {
+      font-size: 3rem;
+      font-weight: 700;
+      margin-bottom: 2rem;
+      color: #0f172a;
+    }
+    .carousel {
+      position: relative;
+      max-width: 100%;
+      overflow: hidden;
+    }
+    .carousel-track {
+      display: flex;
+      transition: transform 0.5s ease-in-out;
+    }
+    .carousel-item {
+      flex: 0 0 100%;
+      max-width: 100%;
+      position: relative;
+      text-align: left;
+    }
+    .carousel-item img {
+      width: 100%;
+      height: auto;
+      border-radius: 8px;
+      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+    }
+    .carousel-item .item-info {
+      position: absolute;
+      bottom: 10%;
+      left: 10%;
+      background: rgba(0, 0, 0, 0.6);
+      color: #f8f9fa;
+      padding: 1rem;
+      border-radius: 8px;
+      opacity: 0;
+      transform: translateY(10px);
+      transition: opacity 0.3s ease, transform 0.3s ease;
+    }
+    .carousel-item:hover .item-info {
+      opacity: 1;
+      transform: translateY(0);
+    }
+    .carousel-item h3 {
+      font-size: 1.5rem;
+      margin-bottom: 0.5rem;
+    }
+    .carousel-item p {
+      font-size: 1rem;
+      line-height: 1.5;
+    }
+    .carousel-button {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      background: rgba(0, 0, 0, 0.5);
+      color: #f8f9fa;
+      border: none;
+      border-radius: 50%;
+      width: 40px;
+      height: 40px;
+      font-size: 2rem;
+      cursor: pointer;
+      z-index: 10;
+    }
+    .carousel-button.prev {
+      left: 1rem;
+    }
+    .carousel-button.next {
+      right: 1rem;
+    }
+    .carousel-button:hover {
+      background: rgba(0, 0, 0, 0.8);
+    }
     .get-in-touch {
       padding: 5rem;
       background: #0f172a;
@@ -221,8 +301,6 @@
       <li><a href="#about-me">About Me</a></li>
       <li><a href="#education">Education</a></li>
       <li><a href="#research">Research</a></li>
-      <li><a href="#publications-and-awards">Publications and Awards</a></li>
-      <li><a href="#gallery">Gallery</a></li>
       <li><a href="#get-in-touch">Get in Touch</a></li>
     </ul>
   </nav>
@@ -243,7 +321,7 @@
           </a>, in collaboration with the
           <a href="https://www.mpip-mainz.mpg.de/en/home" target="_blank">
             Max Planck Institute for Polymer Research
-          </a>, our interdisciplinary team is pioneering new treatments for Multiple Sclerosis (MS), Traumatic Brain injuries (TBI) and Spinal Cord injuries (SCI).
+          </a>, our interdisciplinary team is pioneering new treatments for multiple sclerosis and traumatic brain injuries.
         </p>
         <p>
           Beyond the lab, I enjoy cooking and exploring new places. If you share an interest in neurobiology, regenerative medicine, or the molecular mechanisms of brain repair, I would love to connect!
@@ -317,6 +395,64 @@
       </div>
     </div>
   </section>
+  <section id="research" class="research-section">
+    <h2>Research</h2>
+    <div class="carousel">
+      <div class="carousel-track">
+        <div class="carousel-item">
+          <img src="project1.jpg" alt="Project 1">
+          <div class="item-info">
+            <h3>Project Title 1</h3>
+            <p>Short description of the research project highlighting key aspects.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="project2.jpg" alt="Project 2">
+          <div class="item-info">
+            <h3>Project Title 2</h3>
+            <p>Brief details about the research, objectives, and outcomes.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="project3.jpg" alt="Project 3">
+          <div class="item-info">
+            <h3>Project Title 3</h3>
+            <p>A quick summary of the research and its significance.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="project4.jpg" alt="Project 4">
+          <div class="item-info">
+            <h3>Project Title 4</h3>
+            <p>A brief introduction to this project and its objectives.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="project5.jpg" alt="Project 5">
+          <div class="item-info">
+            <h3>Project Title 5</h3>
+            <p>Highlights of this research project's outcomes.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="project6.jpg" alt="Project 6">
+          <div class="item-info">
+            <h3>Project Title 6</h3>
+            <p>Details of methodology and key findings.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="project7.jpg" alt="Project 7">
+          <div class="item-info">
+            <h3>Project Title 7</h3>
+            <p>Summary of this research's importance and impact.</p>
+          </div>
+        </div>
+      </div>
+      <button class="carousel-button prev">‹</button>
+      <button class="carousel-button next">›</button>
+    </div>
+  </section>
   <section class="get-in-touch" id="get-in-touch">
     <h2>Get in Touch</h2>
     <p><strong>Email:</strong> arupambiswas007@gmail.com</p>
@@ -340,5 +476,31 @@
   <footer>
     © 2025 Arupam Biswas. All rights reserved.
   </footer>
+  <script>
+    const track = document.querySelector('.carousel-track');
+    const items = Array.from(track.children);
+    const prevButton = document.querySelector('.carousel-button.prev');
+    const nextButton = document.querySelector('.carousel-button.next');
+
+    let currentIndex = 0;
+
+    function updateCarousel() {
+      const itemWidth = items[0].getBoundingClientRect().width;
+      track.style.transform = `translateX(-${currentIndex * itemWidth}px)`;
+    }
+
+    prevButton.addEventListener('click', () => {
+      currentIndex = (currentIndex > 0) ? currentIndex - 1 : items.length - 1;
+      updateCarousel();
+    });
+
+    nextButton.addEventListener('click', () => {
+      currentIndex = (currentIndex < items.length - 1) ? currentIndex + 1 : 0;
+      updateCarousel();
+    });
+
+    window.addEventListener('resize', updateCarousel);
+    updateCarousel();
+  </script>
 </body>
 </html>
