--- a/index.html
+++ b/index.html
@@ -301,6 +301,9 @@
       <li><a href="#about-me">About Me</a></li>
       <li><a href="#education">Education</a></li>
       <li><a href="#research">Research</a></li>
+      <li><a href="#sci-comm">Sci-Comm</a></li>
+      <li><a href="#publications-and-awards">Publications & Awards</a></li>
+      <li><a href="#gallery">Gallery</a></li>
       <li><a href="#get-in-touch">Get in Touch</a></li>
     </ul>
   </nav>
