--- a/index.html
+++ b/index.html
@@ -403,9 +403,9 @@
     <div class="carousel">
       <div class="carousel-track">
         <div class="carousel-item">
-          <img src="PhD_F.jpg" alt="Project 1">
+          <img src="Neural-cells-Biomaterials.jpg" alt="Project 1">
           <div class="item-info">
-            <h3>Project Title 1</h3>
+            <h3>Title: Biomaterials for nerve cell regeneration</h3>
             <p>Traumatic injuries of the central nervous system (CNS), such as brain or spinal cord injuries, do not regenerate efficient and therefore often lead to severe and permanent disability. The poor regenerative capacity of the CNS is due to multiple obstacles after injury: 1. a glial scar forms at the lesion site and acts as a barrier for axonal regrowth, 2. myelin and axonal debris send inhibitory cues to axons, which also prevents regrowth, 3. there is no guidance mechanisms allowing axons to regrow in the right direction to reconnect with their former target, 4. Remyelination is not very efficient. These multiple obstacles preclude functional recovery after a CNS injury.</p>
           </div>
         </div>
