--- a/index.html
+++ b/index.html
@@ -405,8 +405,8 @@
         <div class="carousel-item">
           <img src="Neural-cells-Biomaterials.jpg" alt="Project 1">
           <div class="item-info">
-            <h3>Title: Biomaterials for nerve cell regeneration</h3>
-            <p>Traumatic injuries of the central nervous system (CNS), such as brain or spinal cord injuries, do not regenerate efficient and therefore often lead to severe and permanent disability. The poor regenerative capacity of the CNS is due to multiple obstacles after injury: 1. a glial scar forms at the lesion site and acts as a barrier for axonal regrowth, 2. myelin and axonal debris send inhibitory cues to axons, which also prevents regrowth, 3. there is no guidance mechanisms allowing axons to regrow in the right direction to reconnect with their former target, 4. Remyelination is not very efficient. These multiple obstacles preclude functional recovery after a CNS injury.</p>
+            <h3> Project Title: Biomaterials for nerve cell regeneration</h3>
+            <p>  The Carl Zeiss Foundation is funding a six-million-euro project at Johannes Gutenberg University Mainz (JGU) to develop biomaterials for nerve cell regeneration. The "Interactive Biomaterials for Neural Regeneration" (InteReg) project involves collaboration with the Max Planck Institute for Polymer Research and the Leibniz Institute for Resilience Research. The team will create synthetic biomaterials to treat neurological diseases like multiple sclerosis and traumatic brain or spinal cord injuries. These biomaterials will instruct cells to support regeneration. The project starts in January 2025 and aims to produce therapeutic solutions within five years. The research combines expertise in neurobiology, neuroimmunology, chemistry, and polymer research.</p>
           </div>
         </div>
         <div class="carousel-item">
