--- a/index.html
+++ b/index.html
@@ -391,10 +391,10 @@
     <div class="carousel">
       <div class="carousel-track">
         <div class="carousel-item">
-          <img src="project1.jpg" alt="Project 1">
+          <img src="Neural-cells-Biomaterials.jpg" alt="Project 1">
           <div class="item-info">
-            <h3>Project Title 1</h3>
-            <p>Short description of the research project highlighting key aspects.</p>
+            <h3>Project Title: Biomaterials for nerve cell regeneration</h3>
+            <p>The Carl Zeiss Foundation is funding a six-million-euro project at Johannes Gutenberg University Mainz (JGU) to develop biomaterials for nerve cell regeneration. The "Interactive Biomaterials for Neural Regeneration" (InteReg) project involves collaboration with the Max Planck Institute for Polymer Research and the Leibniz Institute for Resilience Research. The team will create synthetic biomaterials to treat neurological diseases like multiple sclerosis and traumatic brain or spinal cord injuries. These biomaterials will instruct cells to support regeneration. The project starts in January 2025 and aims to produce therapeutic solutions within five years. The research combines expertise in neurobiology, neuroimmunology, chemistry, and polymer research.</p>
           </div>
         </div>
         <div class="carousel-item">
