--- a/index.html
+++ b/index.html
@@ -209,16 +209,14 @@
       padding: 1rem;
     }
     .carousel-item img {
-      width: 300px;
+      width: 500px;
       height: auto;
       border-radius: 8px;
       box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
       margin-bottom: 1rem;
     }
     .carousel-item .item-info {
-      background: rgba(0, 0, 0, 0.05);
-      padding: 1rem;
-      border-radius: 8px;
+    margin-left: 1rem; /* Added margin for spacing */
     }
     .carousel-item h3 {
       font-size: 1.5rem;
