--- a/index.html
+++ b/index.html
@@ -185,7 +185,6 @@
       padding: 4rem 2rem;
       background: linear-gradient(to right, #f8fafc, #e0f2fe);
       color: #1e293b;
-      text-align: center;
     }
     .research-section h2 {
       font-size: 3rem;
@@ -205,8 +204,8 @@
     .carousel-item {
       flex: 0 0 100%;
       max-width: 100%;
-      text-align: center;
       padding: 1rem;
+      text-align: left;
     }
     .carousel-item img {
       width: 500px;
@@ -216,7 +215,7 @@
       margin-bottom: 1rem;
     }
     .carousel-item .item-info {
-    margin-left: 1rem; /* Added margin for spacing */
+      margin-left: 1rem;
     }
     .carousel-item h3 {
       font-size: 1.5rem;
