--- a/index.html
+++ b/index.html
@@ -191,6 +191,7 @@
       font-weight: 700;
       margin-bottom: 2rem;
       color: #0f172a;
+      text-align: center;
     }
     .carousel {
       position: relative;
@@ -205,17 +206,19 @@
       flex: 0 0 100%;
       max-width: 100%;
       padding: 1rem;
-      text-align: left;
+      text-align: center;
     }
     .carousel-item img {
       width: 500px;
       height: auto;
       border-radius: 8px;
       box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
-      margin-bottom: 1rem;
+      margin: 0 auto 1rem;
+      display: block;
     }
     .carousel-item .item-info {
-      margin-left: 1rem;
+      text-align: justify;
+      padding: 0 1rem;
     }
     .carousel-item h3 {
       font-size: 1.5rem;
@@ -390,8 +393,8 @@
         <div class="carousel-item">
           <img src="Neural-cells-Biomaterials.jpg" alt="Project 1">
           <div class="item-info">
-            <h3>Project Title: Biomaterials for nerve cell regeneration</h3>
-            <p>The Carl Zeiss Foundation is funding a six-million-euro project at Johannes Gutenberg University Mainz (JGU) to develop biomaterials for nerve cell regeneration. The "Interactive Biomaterials for Neural Regeneration" (InteReg) project involves collaboration with the Max Planck Institute for Polymer Research and the Leibniz Institute for Resilience Research. The team will create synthetic biomaterials to treat neurological diseases like multiple sclerosis and traumatic brain or spinal cord injuries. These biomaterials will instruct cells to support regeneration. The project starts in January 2025 and aims to produce therapeutic solutions within five years. The research combines expertise in neurobiology, neuroimmunology, chemistry, and polymer research.</p>
+            <h3>Biomaterials for Nerve Cell Regeneration</h3>
+            <p>The Carl Zeiss Foundation is funding a six-million-euro project at JGU to develop biomaterials for nerve cell regeneration. The "Interactive Biomaterials for Neural Regeneration" (InteReg) project involves collaboration with the Max Planck Institute for Polymer Research and the Leibniz Institute for Resilience Research. The team will create synthetic biomaterials to treat neurological diseases like multiple sclerosis and injuries.</p>
           </div>
         </div>
         <div class="carousel-item">
@@ -406,34 +409,6 @@
           <div class="item-info">
             <h3>Project Title 3</h3>
             <p>A quick summary of the research and its significance.</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="project4.jpg" alt="Project 4">
-          <div class="item-info">
-            <h3>Project Title 4</h3>
-            <p>A brief introduction to this project and its objectives.</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="project5.jpg" alt="Project 5">
-          <div class="item-info">
-            <h3>Project Title 5</h3>
-            <p>Highlights of this research project's outcomes.</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="project6.jpg" alt="Project 6">
-          <div class="item-info">
-            <h3>Project Title 6</h3>
-            <p>Details of methodology and key findings.</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="project7.jpg" alt="Project 7">
-          <div class="item-info">
-            <h3>Project Title 7</h3>
-            <p>Summary of this research's importance and impact.</p>
           </div>
         </div>
       </div>
