--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
       text-align: center;
     }
     .carousel-item img {
-      width: 500px;
+      width: 700px;
       height: auto;
       border-radius: 8px;
       box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
@@ -393,8 +393,8 @@
         <div class="carousel-item">
           <img src="Neural-cells-Biomaterials.jpg" alt="Project 1">
           <div class="item-info">
-            <h3>Biomaterials for Nerve Cell Regeneration</h3>
-            <p>The Carl Zeiss Foundation is funding a six-million-euro project at JGU to develop biomaterials for nerve cell regeneration. The "Interactive Biomaterials for Neural Regeneration" (InteReg) project involves collaboration with the Max Planck Institute for Polymer Research and the Leibniz Institute for Resilience Research. The team will create synthetic biomaterials to treat neurological diseases like multiple sclerosis and injuries.</p>
+            <h3>Project Title: Biomaterials for Nerve Cell Regeneration</h3>
+            <p>The Interactive Biomaterials for Neural Regeneration (InteReg) project, a five-year collaboration between Johannes Gutenberg University Mainz, the Max Planck Institute for Polymer Research, and the Leibniz Institute for Resilience Research, has secured six million euros from the Carl Zeiss Foundation to develop precision biomaterials for treating neurological diseases. InteReg will focus on creating programmable materials that guide central nervous system cell regeneration following injuries or in conditions like multiple sclerosis. The interdisciplinary team aims to produce solutions such as programmable extracellular matrices for spinal cord repair and nanocarriers targeting oligodendrocyte progenitor cells. With existing patents, start-ups, and clinical trial support available, the project anticipates translating basic research into potential therapeutic applications and will also support young researchers through three new junior groups. This initiative aligns with the Carl Zeiss Foundation's "CZS Breakthroughs" program in life science technologies.</p>
           </div>
         </div>
         <div class="carousel-item">
